--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-    <h1>Cloud and DevOps Information</h1>
+    <h1>GCP</h1>
     <nav>
         <a href="#gcp">GCP</a>
         <a href="#aws">AWS</a>
